--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "develop": "gatsby develop",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public",
     "develop-host": "gatsby develop --host 192.168.0.112",
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
-    "format-output": "prettier src/**/*.{js,jsx}",
-    "format": "prettier --write src/**/*.{js,jsx}",
-    "lint-errors": "eslint src/**/*.{js,jsx} --quiet",
-    "lint": "eslint src/**/*.{js,jsx}",
+    "format-output": "prettier ./src/**/*.js",
+    "format": "prettier --write ./src/**/*.js",
+    "lint-errors": "eslint ./src/**/*.js --quiet",
+    "lint": "eslint src/**/*.js",
     "generate-app-icons": "sh ./scripts/generate-app-icons.sh"
   },
   "devDependencies": {
@@ -35,6 +35,7 @@
     "eslint-plugin-react": "^7.10.0",
     "gh-pages": "^1.2.0",
     "prettier": "^1.13.7",
+    "prettier-eslint": "^8.8.2",
     "sharp-cli": "^1.7.0",
     "webpack-bundle-analyzer": "^2.13.1"
   },
