--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@material-ui/core": "^1.4.0",
     "@material-ui/icons": "^1.1.0",
     "color": "^3.0.0",
+    "disqus-react": "^1.0.5",
     "gatsby": "^1.9.274",
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.46",
@@ -80,7 +81,6 @@
     "react-instantsearch": "^5.2.2",
     "react-lazyload": "^2.3.0",
     "react-loadable-visibility": "^2.5.0",
-    "react-material-ui-form-validator": "^2.0.1",
     "react-obfuscate": "^2.1.4",
     "react-popper": "0.10.4",
     "react-redux": "^5.0.6",
@@ -88,6 +88,7 @@
     "rebound": "^0.1.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
-    "screenfull": "^3.3.2"
+    "screenfull": "^3.3.2",
+    "url-join": "^4.0.0"
   }
 }
