--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "blog",
   "description": "",
   "author": {
-    "name": "Greg Lobinski",
-    "email": "greglobinski@gmail.com"
+    "name": "Manraj Singh",
+    "email": "manrajsinghgrover@gmail.com"
   },
-  "repository": "https://github.com/greglobinski/gatsby-starter-personal-blog",
+  "repository": "https://github.com/manrajgrover/blog",
   "version": "1.1.1",
   "license": "MIT",
   "scripts": {
