--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "license": "MIT",
   "scripts": {
     "develop": "gatsby develop",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public",
+    "cleanup": "rm -f ./.cache ./public",
+    "publish": "gh-pages -d public",
+    "deploy": "npm run cleanup && gatsby build --prefix-paths && npm run publish",
     "develop-host": "gatsby develop --host 192.168.0.112",
     "build": "gatsby build --prefix-paths",
     "serve": "gatsby serve",
