--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "version": "1.1.1",
   "license": "MIT",
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "npm run cleanup && gatsby develop",
     "cleanup": "rm -rf ./.cache ./public",
     "publish": "gh-pages -d public",
     "deploy": "npm run cleanup && gatsby build --prefix-paths && npm run publish",
