Package: Adds description and removes package-lock in favour of yarn.lock

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blog",
-  "description": "",
+  "description": "Yeah, lets call it a blog!",
   "author": {
     "name": "Manraj Singh",
     "email": "manrajsinghgrover@gmail.com"
